--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([{1: 1}, {2: 1, 1: 1}, {3: 1, 1: 1}], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [{1:1, 1:1},{2:1, 1:1},{3:1, 1:1}]\n",
+    "b = np.array(a)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
